// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`brainAtlas render goldens > detail panel: cerebellum (ACCURACY LOCK — ~80%, not 50%) 1`] = `
{
  "buttons": 42,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 123,
  "sha": "f07038351f228f96",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > detail panel: dopamine (ACCURACY LOCK — no "pleasure chemical" overclaim) 1`] = `
{
  "buttons": 49,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 158,
  "sha": "a74e721152ec09d4",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > quiz mode renders a question + options 1`] = `
{
  "buttons": 43,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 114,
  "sha": "eed4f4ee86e2320b",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: basalGangliaLoop renders + pins a digest 1`] = `
{
  "buttons": 47,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 150,
  "sha": "b3f90017901bd91f",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: brainstemCrossSection renders + pins a digest 1`] = `
{
  "buttons": 43,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 136,
  "sha": "d182b0c4ccfdc6e5",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: cerebellumClinic renders + pins a digest 1`] = `
{
  "buttons": 43,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 136,
  "sha": "45c961c7c599e456",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: cranialNervesWillis renders + pins a digest 1`] = `
{
  "buttons": 52,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 164,
  "sha": "6a7c7e33fe9b17a6",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: crossLateral renders + pins a digest 1`] = `
{
  "buttons": 43,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 138,
  "sha": "79a781a8af615da4",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: csfHydrocephalus renders + pins a digest 1`] = `
{
  "buttons": 43,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 137,
  "sha": "7d48587c16219908",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: eegWaves renders + pins a digest 1`] = `
{
  "buttons": 50,
  "canvases": 2,
  "inputs": 1,
  "lengthBucket": 149,
  "sha": "6c008ba5536cd508",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: homunculus renders + pins a digest 1`] = `
{
  "buttons": 45,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 134,
  "sha": "68776e13186877c6",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: inferior renders + pins a digest 1`] = `
{
  "buttons": 47,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 142,
  "sha": "53bcce90079aa6a7",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: languageNetwork renders + pins a digest 1`] = `
{
  "buttons": 49,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 150,
  "sha": "17fc878f637d6cb0",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: lateral renders + pins a digest 1`] = `
{
  "buttons": 52,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 162,
  "sha": "0b1dae113ba0b3b9",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: limbicPapezLoop renders + pins a digest 1`] = `
{
  "buttons": 50,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 162,
  "sha": "cfeb5e0b330396b9",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: medial renders + pins a digest 1`] = `
{
  "buttons": 51,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 158,
  "sha": "c858f75cbfd7a0b9",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: neuron renders + pins a digest 1`] = `
{
  "buttons": 43,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 141,
  "sha": "190493526205bca3",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: neurotransmitters renders + pins a digest 1`] = `
{
  "buttons": 64,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 217,
  "sha": "cdff229ef0f90d03",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > view: sleepStages renders + pins a digest 1`] = `
{
  "buttons": 41,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 127,
  "sha": "4af815bafec0e898",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: stimulate renders + pins a digest 1`] = `
{
  "buttons": 46,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 142,
  "sha": "bb171f5e2cc9a139",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: strokeTerritories renders + pins a digest 1`] = `
{
  "buttons": 43,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 137,
  "sha": "0e6d503d453e5028",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: superior renders + pins a digest 1`] = `
{
  "buttons": 44,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 130,
  "sha": "c40c83c52dd5fdd6",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: synapses renders + pins a digest 1`] = `
{
  "buttons": 42,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 128,
  "sha": "accb5d6f6938c5da",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: visualPathway renders + pins a digest 1`] = `
{
  "buttons": 48,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 146,
  "sha": "9dc2622359ba8093",
  "svgs": 0,
}
`;
